# Matrix

./: CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  matrix_benchmark.cpp
include/: .linear_regression.h.swp  matrix.h
include/linalg/: algorithms.h
src/: CMakeLists.txt  errors.h  matrix.cpp  matrix.h  vector.cpp  vector.h
src/linalg/: algorithms.cpp  algorithms.h  decompositions.cpp  decompositions.h  utils.cpp  utils.h
test/: CMakeLists.txt  main  main.cpp  matrix_test.cpp  vector_test  vector_test.cpp
test/linalg/: algorithms_test  algorithms_test.cpp  decompositions_test.cpp
